<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/q_boy" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flag"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/a_boy"
                        android:textSize="19sp" />

                    <RadioButton
                        android:id="@+id/two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/a_woman"
                        android:textSize="19sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="80dp">

                    <RadioButton
                        android:id="@+id/three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/a_man"
                        android:textSize="19sp" />

                    <RadioButton
                        android:id="@+id/fourth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|bottom"
                        android:text="@string/a_girl"
                        android:textSize="19sp" />

                </TableRow>

            </TableLayout>

        </RadioGroup>
<RelativeLayout
    android:id="@+id/btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/radioGroup">
        <Button
            android:id="@+id/check"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:textSize="21sp"
            android:background="@drawable/border_button_edittxt"
            android:text="@string/check" />
        <Button
            android:id="@+id/next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:visibility="gone"
            android:textSize="21sp"
            android:background="@drawable/border_button_edittxt"
            android:text="@string/next" />
</RelativeLayout>
        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_below="@+id/btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/progress_1" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>