<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="190dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />


        <EditText
            android:id="@+id/email"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/email"
            android:background="@drawable/edittxt"
            android:padding="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="59dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/password"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittxt"
            android:padding="10dp"
            android:layout_marginStart="59dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/black"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonIn"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:background="@drawable/border_button_edittxt"
            android:textSize="23sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="99dp"
            android:text="@string/signIn" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="240dp"
            android:layout_height="39dp"
            android:textSize="17sp"
            android:background="@drawable/border_button_edittxt"
            android:layout_marginStart="119dp"
            android:layout_marginTop="13dp"
            android:text="@string/signUp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>